Use distance from sun, promising.

--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
 <!--      >-->
 
       <a-entity
-        :position="{ x: 0, y: 0, z: -25 * (1 - r.userZMultipler) }"
+        :position="{ x: 0, y: 0, z: 0 }"
         :scale="{x: r.globalScale, y: r.globalScale, z: r.globalScale}"
         :rotation="{x: r.globalRotation, y: 0, z: 0}"
       >
