Removed 'Ees keskel', better size for galaxies.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       };
 
       const messier = {
-        clusters: { visible: false, scale: defaultModelScale * 0.7, opacity: 0 },
+        clusters: { visible: false, scale: defaultModelScale * 2, opacity: 0 }, // scale was 0.7
         // clusters2: { visible: false, scale: defaultModelScale * 100, opacity: 0 },
         nebulas: { visible: false, scale: defaultModelScale, opacity: 0 },
         //galaxies: { visible: false, scale: defaultModelScale, opacity: 0 },
@@ -932,7 +932,7 @@
       >
       </a-sky>
 
-      <a-text id="deleteMe" position="0 2.5 -10" value="Ees keskel" align="center"></a-text>
+<!--      <a-text id="deleteMe" position="0 2.5 -10" value="Ees keskel" align="center"></a-text>-->
 
 
       <!-- Planets -->
